--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.4",
@@ -15,7 +17,11 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
